# eigen_mkl

./: CMakeLists.txt  eigen.h  linalg.cc  main.cpp
.github/workflows/: continuous-integration-workflow.yml
