cmake_minimum_required(VERSION 3.14)
project(foo CXX)
find_package(Eigen3 REQUIRED)
find_package(MKL)
add_executable(dummy main.cpp linalg.cc)
target_link_libraries(dummy Eigen3::Eigen)
if(MKL_FOUND)
  target_compile_definitions(dummy PUBLIC EIGEN_USE_MKL_ALL)
  target_link_libraries(dummy MKL::MKL)
endif()
